@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [FILEBEAT] Separate building configurations and restarting service
 ### Fixed
 - [FRONTEND] Hot-disable a collector manually
+- [SERVICES] Delete duplicated services statuses
 
 
 ## [2.24.0] - 2025-03-28
